# purchase-mgmt

./: README.md
purchase-backend/: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
purchase-backend/apps/common/: common_repository.py  common_utlis.py
purchase-backend/apps/order_mgmt/: apps.py  choices.py  models.py
purchase-backend/apps/order_mgmt/api/v1/: serializers.py  urls.py  views.py
purchase-backend/apps/order_mgmt/migrations/: 0001_initial.py  0002_remove_order_uuid_alter_order_order_number.py
purchase-backend/apps/publisher/: pubs.py
purchase-backend/apps/supplier_mgmt/: apps.py  models.py
purchase-backend/apps/supplier_mgmt/api/v1/: serializers.py  urls.py  views.py
purchase-backend/apps/supplier_mgmt/migrations/: 0001_initial.py  0002_remove_supplier_name.py  0003_alter_supplier_address_alter_supplier_bank_details_and_more.py  0004_rename_phone_name_contactperson_phone.py  0005_alter_supplier_address.py
purchase-backend/project/: urls.py
purchase-backend/project/settings/: __init__.py  base.py  local.py
